# food_justice

./: .gitattributes  .gitignore  README.md  desert_estimate.ipynb  metros.example.json  metros.json  metros.top20.json  package-lock.json  pyproject.toml  wrangler.jsonc
MBTA_GTFS/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  checkpoints.txt  directions.txt  facilities.txt  facilities_properties.txt  feed_info.txt  multi_route_trips.txt  pathways.txt  route_patterns.txt  routes.txt  shapes.txt  stop_areas.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt  trips_properties.txt
data_cache/docs-data/atlanta_ga/: breaks.json  metro_grid_summary_15.csv  metro_grid_summary_20.csv  metro_grid_walk_transit_summary_15.csv  metro_grid_walk_transit_summary_20.csv  tract_subgrid_summary_15.csv  tract_subgrid_summary_20.csv  tract_subgrid_walk_transit_summary_15.csv  tract_subgrid_walk_transit_summary_20.csv  tract_summary_15.csv  tract_summary_20.csv  tract_walk_transit_summary_15.csv  tract_walk_transit_summary_20.csv  zip_summary_15.csv  zip_summary_20.csv  zip_walk_transit_summary_15.csv  zip_walk_transit_summary_20.csv
data_inputs/: tracts_us.gpkg  zcta_us.gpkg
docs/: index.html  index.html.bak
docs/data/: manifest.json
docs/static/: app.css  app.js
exploratory/: ACSDT5YSPT2021.B01003-Column-Metadata.csv  ACSDT5YSPT2021.B01003-Data.csv  boston_food_desert_map.html  desert_estimate.ipynb
functions/data/: [...path].js  [[path]].js
scripts/: build_metro_areas.py  deploy_pages_r2.sh  download_tracts.py  generate_manifest.py  minify_geojson.py
(+1509 files in other folders)
