[project]
name = "food-justice"
version = "0.1.0"
description = ""
authors = [
    {name = "insilijo",email = "joseph.j.gardner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "geopandas (>=1.1.2,<2.0.0)",
    "osmnx (>=2.0.7,<3.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "pyogrio (>=0.12.1,<0.13.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "urllib3 (>=2.6.2,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
